--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
     rev: v1.11.2
     hooks:
       - id: mypy
+        additional_dependencies: ['types-requests']
   - repo: local
     hooks:
       - id: pylint
